--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:inputType="textPersonName" />
 
         <ImageButton
             android:id="@+id/gps"
@@ -46,6 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.20"
+            android:onClick="GetWeather"
             android:text="Find" />
     </LinearLayout>
 
